--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,21 +6,13 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+
+.container {
+  max-width: 800px;
+  padding: 200px 50px;
+  margin: auto;
 }
 
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+.page {
+  padding: 20px;
 }
